# near-notes

./: README.md  build.sh  deploy.sh
.github/workflows/: ci.yml  rust.yml
contracts/categories/: Cargo.toml  cargo.toml
contracts/categories/src/: lib.rs  testing.rs
contracts/tasks/: Cargo.toml  cargo.toml
contracts/tasks/src/: lib.rs  testing.rs
